--- a/style.css
+++ b/style.css
@@ -146,6 +146,18 @@ body{ background-color: #000 !important; overflow-x: hidden;}
 }
 /* End Profile e Cv */
 
+/* work start */
+#work img {
+    width: 100%;
+    height: 100px;
+    object-fit: contain;
+}
+#work img:hover{
+    transform: rotate(360deg);
+    transition: 0.5s;
+    box-shadow: 0px 0px 0px 2px red inset;
+}
+
 
 /* MediaQeury */
 @media (max-width: 1200px){
